<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/my_bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            android:text="@string/covid19"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="17dp"
            android:fontFamily="@font/brandon_grotesque_medium_italic_58a8a3c40866a"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="callLoginScreen"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login_btn" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="callSignUpScreen"
                android:text="@string/register"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>