<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".DashBoard.DashBoardActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/ic_homebg">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="ManageAccount"
                android:padding="5dp"
                app:srcCompat="@drawable/account"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="291dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCovid19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="240dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                android:text="@string/covid19"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/txtTitle"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                android:lineSpacingExtra="8dp"
                android:text="@string/title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCovid19" />

            <TextView
                android:id="@+id/txtTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/title2"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />


            <RelativeLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <ImageView
                    android:id="@+id/imageOwn"
                    android:layout_width="wrap_content"
                    android:layout_height="126dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="138dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="20dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/own_test"
                    tools:ignore="VectorDrawableCompat" />

                <Button
                    android:id="@+id/btnChat"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="132dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="148dp"
                    android:background="@drawable/call_button"
                    android:drawableLeft="@drawable/ic_message_circle"
                    android:drawablePadding="4dp"
                    android:paddingLeft="16dp"
                    android:text="Chat now"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="10dp">
            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptoms"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/brandon_grotesque_regular_italic_58a8a456c4724"
                    android:textAllCaps="false"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/symptoms"
                android:layout_width="match_parent"
                android:layout_height="120dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_regular_italic_58a8a456c4724"
                    android:text="@string/prevention"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Prevention"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Button
                    android:onClick="statistic"
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/stat_button"
                    android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                    android:fontFamily="@font/brandon_grotesque_regular_italic_58a8a456c4724"
                    android:includeFontPadding="false"
                    android:text="@string/see_statistics"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#2B2626"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.477"
                    app:layout_constraintStart_toStartOf="parent">

                </Button>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>