<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="30dp"
    android:background="@drawable/my_bg2"
    android:transitionName="transition_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:padding="7dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true"
                tools:ignore="MissingClass" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_country_code_picker"
                android:hint="Enter Phone Number"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_phone_number_icon"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLoginPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LoginPhoneNumber"
                android:hint="Enter Password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_password_number_icon"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:includeFontPadding="true"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LoginPassword"
                android:layout_marginTop="10dp">


                <CheckBox
                    android:id="@+id/cbxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:text="@string/remember_me"
                    android:textColor="@color/black" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:onClick="callForgetPassword"
                    android:text="@string/forget_password"
                    tools:ignore="OnClick" />


            </RelativeLayout>


            <Button
                android:id="@+id/letTheUserLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn"
                android:onClick="Login"
                android:text="@string/login"
                android:textColor="@color/white"
                tools:ignore="OnClick" />


<!--            <RelativeLayout-->
<!--                android:id="@+id/LoginProgressBar"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:elevation="8dp"-->
<!--                android:padding="20dp"-->
<!--                android:visibility="gone">-->


<!--&lt;!&ndash;                <ProgressBar&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_width="30dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_height="30dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_centerInParent="true" />&ndash;&gt;-->


<!--            </RelativeLayout>-->

        </RelativeLayout>

    </LinearLayout>
</ScrollView>